--- a/.travis.yml
+++ b/.travis.yml
@@ -35,11 +35,11 @@ install:
   # - pip install --no-deps -e .
   - pip install --no-deps -e .
 
-script:
+script: pytest
   - which python
   - python --version
   # - python -m unittest discover stglib/tests
   # this is what ran and passed in my python environment
   # pytest is included with the base conda installation
   # the travis docs indicate that if pytest is indicates on the script: line, this is not needed?
-  - pytest test_TRDIpd0_analyzepd0file.py
+  # - pytest test_TRDIpd0_analyzepd0file.py
