travis error fix take 9.2 back to netCDF4

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,11 +35,11 @@ install:
   - source activate test-environment
   - pip install --no-deps -e .
 
-script:
+script: pytest
   # - which python
   # - python --version
   # - python -m unittest discover stglib/tests
   # this is what ran and passed in my python environment
   # pytest is included with the base conda installation
   # the travis docs indicate that if pytest is indicates on the script: line, this is not needed?
-  - pytest ./tests/test_TRDIpd0_analyzepd0file.py
+  #- pytest ./tests/test_TRDIpd0_analyzepd0file.py
