--- a/requirements-test.yml
+++ b/requirements-test.yml
@@ -4,7 +4,7 @@ name: test-environment
 channels:
   - conda-forge
 dependencies:
-  - python=3.7
+  - python
   # note netcdf4 rather than netCDF4
-  - netcdf4
+  - netCDF4
   - numpy
