--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ install:
 script:
   - if [[ $TRAVIS_JOB_NAME == python-* ]]; then
       cp -r tests/ /tmp ;
-      pushd /tmp && pytest -n 2 -rxs tests && popd ;
+      pushd /tmp && pwd && pytest -n 2 -rxs tests && popd ;
     fi
 
   - if [[ $TRAVIS_JOB_NAME == 'tarball' ]]; then
