--- a/data/demo2/.gitattributes
+++ b/data/demo2/.gitattributes
@@ -1,1 +1,3 @@
 10631whV20784profilestiny.pd0 filter=lfs diff=lfs merge=lfs -text
+10631whV.cdf filter=lfs diff=lfs merge=lfs -text
+10631whV.nc filter=lfs diff=lfs merge=lfs -text
